Fix invisible log in button

--- a/aviary-angular/src/app/components/account-management/current-user/current-user.component.scss
+++ b/aviary-angular/src/app/components/account-management/current-user/current-user.component.scss
@@ -6,3 +6,7 @@
 .status-text {
   display: inline-block;
 }
+
+button {
+  color: initial;
+}
